fetch address commit

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ async function sendMessage() {
     input.value = "";
 
     try {
-        const response = await fetch("http://localhost:https://ai-conversational-recommender.onrender.com/chat", {
+        const response = await fetch("https://ai-conversational-recommender-1.onrender.com/chat", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
